--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
-.App {
+.log{
+  width: 278px;
+  height: 52px;
+  top: 268px;
+  left: 41px;
+  border-radius: 46px;
+  color: white;
+  background-color: #580EA2;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: -0.05000000074505806px;
   text-align: center;
 }
+.reg{
+  width: 278px;
+  height: 52px;
+  top: 340px;
+  left: 41px;
+  border-radius: 46px;
+  background-color: #D0CECE;
+  border: 1px solid #D0CECE;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: -0.05000000074505806px;
+  text-align: center;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.login_block{
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  position: absolute;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  flex-direction: column;
+  top: 50%;
+  left: 50%;
+  gap: 32px
 }
+.log_text{
+  width: 278.5px;
+  top: 138px;
+  left: 40.5px;
+  border-bottom: 1px solid #D0CECE;
+  background: transparent;
+  outline: none;
+  border: none;
 
-.App-link {
-  color: #61dafb;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.pas_text{
+  width: 278.5px;
+  top: 208px;
+  left: 40.5px;
+  border-bottom: 1px solid #D0CECE;
+  background: transparent;
+  outline: none;
+  border: none;
 }
